--- a/quiz.html
+++ b/quiz.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/quiz.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <div class="app-container">
         <div class="home-screen box">
@@ -19,8 +21,8 @@
             <p>Número de questões: <span class="total-questions"></span></p>
             <button type="button" class='start-btn btn'>Começar Simulado</button>
         </div>
-        <div class="quiz-screen box hide"> 
-            <div class="current-question">  
+        <div class="quiz-screen box hide">
+            <div class="current-question">
             </div>
             <div class="text-question">
             </div>
@@ -31,11 +33,11 @@
             </div>
             <div class="answers-questions">
             </div>
-            <div class="info-quesion"> 
+            <div class="info-quesion">
             </div>
-             
+
         </div>
-    
+
         <div class="result-screen box hide">
             <h1>Resultado</h1>
             <table>
@@ -72,8 +74,9 @@
             <button type="button" class="home-btn btn">Voltar ao inicio</button>
         </div>
     </div>
-   
+
     <script src="./js/questions.js"></script>
     <script src="./js/app.js"></script>
 </body>
+
 </html>
